--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -4,21 +4,21 @@
 @config "../../tailwind.config.cjs";
 
 :root {
-    --primary-color: #0070f3;
-    --border-color: #eaeaea;
-    --text-color: #333;
-    --background-color: #fff;
-    --shadow-color: rgba(0, 0, 0, 0.1);
-    --font-sans: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  --primary-color: #0070f3;
+  --border-color: #eaeaea;
+  --text-color: #333;
+  --background-color: #fff;
+  --shadow-color: rgba(0, 0, 0, 0.1);
+  --font-sans:
+    -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu",
+    "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
 }
 
 html,
 body {
-    max-width: 100vw;
-    overflow-x: hidden;
-    font-family: var(--font-sans), serif;
-    color: var(--text-color);
-    background-color: var(--background-color);
+  max-width: 100vw;
+  overflow-x: hidden;
+  font-family: var(--font-sans), serif;
+  color: var(--text-color);
+  background-color: var(--background-color);
 }
